# lis-workbench

./: .gitignore  AUTO_UPDATE_DESIGN.md  CHANGELOG.md  CMakeLists.txt  EMERGENCY_SAMPLE_STATISTICS_DESIGN.md  MAIN_APP_PLAN.md  MODULE_SYSTEM_DESIGN.md  Makefile  PROJECT_STRUCTURE.md  QT_MIGRATION_GUIDE.md  QT_PREP_PLAN.md  QUALITY_CONTROL_ANALYSIS_DESIGN.md  QUERY_DESIGN.md  README.md  TREND_CHART_PLAN.md  WIN32_NATIVE_UI_DESIGN.md  lis.ps1
.github/workflows/: build.yml
packaging/: LISWorkbench.nsi  README_windows_installer.md  ResultSearch.nsi
resource/: app.manifest  app.rc  resource.h
scripts/: build_main.ps1  build_qt.ps1  build_windows_package.sh  create_update_package.ps1  lis.ps1
src/: app_settings.cpp  app_settings.h  app_settings_io.cpp  app_settings_io.h  barcode_label_printing.cpp  barcode_label_printing.h  barcode_module.cpp  barcode_module.h  blood_module.cpp  blood_module.h  crash_handler.cpp  emergency_statistics_module.cpp  emergency_statistics_module.h  hiv_statistics_module.cpp  hiv_statistics_module.h  log.cpp  log.h  machine_picker_popup.cpp  machine_picker_popup.h  main.cpp  main_app.h  main_frame.cpp  mchc_correction_module.cpp  mchc_correction_module.h  menu_toolbar.cpp  menu_toolbar.h  module_registry.h  quality_control_chart_renderer.cpp  quality_control_chart_renderer.h  quality_control_import.cpp  quality_control_import.h  quality_control_module.cpp  quality_control_module.h  quality_control_settings_dialog.cpp  quality_control_settings_dialog.h  quality_control_store.cpp  quality_control_store.h  query_module.cpp  query_module.h  quick_machine_keys.h  (+49 more)
src_qt/: main.cpp  main_window.cpp  main_window.h  resources.qrc  settings_dialog.cpp  settings_dialog.h  trend_window.cpp  trend_window.h
